objects/nFORCE__Language__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Flag_Image__c</fullName>
        <description>This field contains the URL for the hosted image that appears next to the language in the language selection tool of the Customer Engagement Solution.</description>
        <label>Flag Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is active, users of the Customer Engagement Solution are given the option to change to this language.</description>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Language_Display_Name__c</fullName>
        <description>This field determines how the language appears to the Customer Engagement Solution User.</description>
        <label>Language Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Locale_Key__c</fullName>
        <description>This field stores the optional LocaleSidKey to map selection of the language to a particular locale (ex. en_US).</description>
        <inlineHelpText>Enter an optional locale key to map selection of this language to a specific locale.</inlineHelpText>
        <label>Locale Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__LookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <label>LookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Language</label>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>